Добавлены unit-тесты для модуля features:schedule