@@ -5,10 +5,13 @@ plugins {
     alias(libs.plugins.kotlin.compose)
     alias(libs.plugins.kotlin.parcelize)
     alias(libs.plugins.kotlin.serialization)
+    alias(libs.plugins.kover)
 }
 
 android {
     namespace = "ru.erdenian.studentassistant.schedule"
+
+    testOptions.unitTests.all { it.jvmArgs("--add-opens=java.base/java.time=ALL-UNNAMED") }
 }
 
 dependencies {
@@ -21,6 +24,10 @@ dependencies {
     implementation(project(":features:repository:api"))
     implementation(project(":features:schedule:api"))
     implementation(project(":features:homeworks:api"))
+    // endregion
+
+    // region Tests
+    testImplementation(libs.bundles.test.unit)
     // endregion
 
     // region Kotlin
